@@ -1,8 +1,5 @@
 package INAF.LybraSys.User.Application.ServiceImpl;
 
-import INAF.LybraSys.Emprunt.infrastructure.EmpruntRepository;
-import INAF.LybraSys.Role.domain.RoleModel;
-import INAF.LybraSys.Role.infrastructure.RoleRepository;
 import INAF.LybraSys.User.Api.Dto.UsersRequestDto;
 import INAF.LybraSys.User.Api.Dto.UsersResponseDto;
 import INAF.LybraSys.User.Application.Service.UsersService;
@@ -10,89 +7,76 @@ import INAF.LybraSys.User.Domain.UsersModel;
 import INAF.LybraSys.User.Infrastructure.UsersRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
-
 public class UsersServiceImpl implements UsersService {
 
     private final UsersRepository usersRepository;
-    private final RoleRepository roleRepository;
 
-
-
-    public UsersServiceImpl(UsersRepository usersRepository, RoleRepository roleRepository) {
+    public UsersServiceImpl(UsersRepository usersRepository) {
         this.usersRepository = usersRepository;
-        this.roleRepository = roleRepository;
     }
-
 
     @Override
-    public UsersResponseDto createUsers(UsersRequestDto usersRequestDto) {
-
-        RoleModel role = roleRepository.findById(usersRequestDto.roleId())
-                .orElseThrow(() -> new RuntimeException("Role introuvable avec id: " + usersRequestDto.roleId()));
-
-        UsersModel user = new UsersModel();
-        user.setName(usersRequestDto.name());
-        user.setFirstname(usersRequestDto.firstname());
-        user.setRole(role);
-
-
+    public UsersResponseDto createUsers(UsersRequestDto dto) {
+        UsersModel user = toEntity(dto);
         UsersModel savedUser = usersRepository.save(user);
-
-
-        return new UsersResponseDto(
-                savedUser.getIdUser(),
-                savedUser.getName(),
-                savedUser.getFirstname(),
-                savedUser.getRole().getName()
-        );
+        return toDto(savedUser);
     }
-
 
     @Override
     public List<UsersResponseDto> getUsers() {
-        List<UsersModel> users = usersRepository.findAll();
-
-        return users.stream()
-                .map(user -> new UsersResponseDto(
-                        user.getIdUser(),
-                        user.getName(),
-                        user.getFirstname(),
-                        user.getRole() != null ? user.getRole().getName() : null
-                )).toList();
-
+        return usersRepository.findAll()
+                .stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public UsersResponseDto updateUser(int idUser, UsersRequestDto usersRequestDto) {
-
+    public UsersResponseDto updateUser(int idUser, UsersRequestDto dto) {
         UsersModel user = usersRepository.findById(idUser)
-                .orElseThrow(() -> new RuntimeException("Utilisateur introuvable avec id: " + idUser));
+                .orElseThrow(() -> new RuntimeException("User not found with id " + idUser));
 
-        user.setName(usersRequestDto.name());
-        user.setFirstname(usersRequestDto.firstname());
-
-
+        // Mise à jour de l'utilisateur avec les données du DTO
+        user.setUsername(dto.username());
+        user.setEmail(dto.email());
+        user.setPassword(dto.password());
+        user.setRole(dto.role());
 
         UsersModel updatedUser = usersRepository.save(user);
-
-        return new UsersResponseDto(
-                updatedUser.getIdUser(),
-                updatedUser.getName(),
-                updatedUser.getFirstname(),
-                updatedUser.getRole().getName()
-        );
+        return toDto(updatedUser);
     }
+
     @Override
     public boolean deleteUsers(int idUser) {
-        if (usersRepository.existsById(idUser)) {
-            usersRepository.deleteById(idUser);
-            return true;
-        } else {
+        if (!usersRepository.existsById(idUser)) {
             return false;
         }
+        usersRepository.deleteById(idUser);
+        return true;
+    }
+
+    // Convertit le DTO en entité
+    private UsersModel toEntity(UsersRequestDto dto) {
+        UsersModel user = new UsersModel();
+        user.setUsername(dto.username());
+        user.setEmail(dto.email());
+        user.setPassword(dto.password());
+        user.setRole(dto.role());
+        return user;
+    }
+
+    // Convertit l'entité en DTO
+    private UsersResponseDto toDto(UsersModel user) {
+        return new UsersResponseDto(
+                user.getIdUser(),
+                user.getUsername(),
+                user.getEmail(),
+                user.getRole()
+        );
     }
 }
